:bug: outline overflow

--- a/src/assets/scss/_content.scss
+++ b/src/assets/scss/_content.scss
@@ -261,6 +261,7 @@
       padding: 10px 0;
       max-height: 100vh;
       color: var(--textarea-text-color);
+      box-sizing: border-box;
 
       &::-webkit-scrollbar {
         display: none;
